--- a/admin-module/pom.xml
+++ b/admin-module/pom.xml
@@ -24,5 +24,11 @@
             <artifactId>common-module</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx</artifactId>
+            <version>11</version>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 </project>
